Créé mon menu principal.xml fonctionnel, randomizer de langue est pleinement opérationnel

--- a/src/main/resources/traductions/chaines_fr.properties
+++ b/src/main/resources/traductions/chaines_fr.properties
@@ -6,4 +6,5 @@ sonOn=Son ON
 sonOff=Son OFF
 confirmation=Confirmer
 annulation=Annuler
-intensite=Intensité   
+intensite=Intensité
+test=Bonjour Le Monde   
